--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -16,66 +22,19 @@
   </head>
   <body>
     <h1>CSS3 To-Do List</h1>
-
-    <div>
-      <!-- <table class="table border-0  w-50 m-auto my-5">
-
-        <tr><td><h4>Eat My Breakfast</h4>Oatmeal, Fruits & Morning Tea<i class="fa-solid fa-circle-check "></i></td></tr>
-
-        <tr><td><h4>Meditation</h4>Out Of My Mind<i class="fa-solid fa-circle-check "></i></td></tr>
-
-        <tr><td><h4>Code, Code, Code</h4>Hit F12 & Let's Get Wasted<i class="fa-solid fa-circle-check"></i></td></tr>
-    
-        <tr><td><h4>Watch Screencast</h4>Ruby On Rails, Yeah!<i class="fa-solid fa-circle-check"></i></td> </tr>             
-    </table> -->
+    <div class="top">
+      <input id="header" type="text" placeholder="To-Do Header" />
+      <div class="warning w1">Please enter a header</div>
+    </div>
+    <div class="top">
+      <input id="desc" type="text" placeholder="To-Do Description" />
+      <div class="warning w2">Please enter a description</div>
     </div>
 
-    <div class="main-container">
-      <div class="todo-item">
-        <div class="todo-text">
-          <h4>Eat My Breakfast</h4>
-          <p>Oatmeal, Fruits & Morning Tea</p>
-        </div>
-        <div>
-          <i class="fa-solid fa-circle-check fa-2x"></i>
-        </div>
-      </div>
-      <div class="todo-item">
-        <div class="todo-text">
-          <h4>E-Mail Processing</h4>
-          <p>Art&Code, Personal</p>
-        </div>
-        <div>
-          <i class="fa-solid fa-circle-check fa-2x"></i>
-        </div>
-      </div>
-      <div class="todo-item">
-        <div class="todo-text">
-          <h4>Meditation</h4>
-          <p>Out Of My Mind</p>
-        </div>
-        <div>
-          <i class="fa-solid fa-circle-check fa-2x"></i>
-        </div>
-      </div>
-      <div class="todo-item">
-        <div class="todo-text">
-          <h4>Code, Code, Code</h4>
-          <p>Hit F12 & Let's Get Wasted</p>
-        </div>
-        <div>
-          <i class="fa-solid fa-circle-check fa-2x"></i>
-        </div>
-      </div>
-      <div class="todo-item">
-        <div class="todo-text">
-          <h4>Watch Screencast</h4>
-          <p>Ruby On Rails, Yeah!</p>
-        </div>
-        <div>
-          <i class="fa-solid fa-circle-check fa-2x"></i>
-        </div>
-      </div>
-    </div>
+    <button class="add">Add</button>
+
+    <div class="main-container"></div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
